# commander-blood-tools

./: .gitignore  1  CLAUDE.md  Cargo.toml  README.md  flake.nix
accuracy/: README.md  analyze_boot_band.py  compare_oracle.py  dosbox.conf  hand_build_verify.py  hand_isolate.py  hand_tree.py  hub_records.sav  interception_oracle_transcript.txt  oracle-scenarios.tsv  retrofit_capture_manifest.py  run_oracle.sh  scan_boot_beats.py  test_compare_oracle.py  test_retrofit_capture_manifest.py
boot_frames/: bd_00210M.dac  bd_00210M.idx  bd_00218M.dac  bd_00218M.idx  bd_00226M.idx  bd_00226M.ppm  bd_00240M.dac  bd_00240M.idx  bd_00290M.dac  bd_00290M.idx  bd_00290M.ppm  boot_00080M.ppm  boot_00110M.ppm  boot_00160M.ppm  boot_00210M.ppm  boot_00220M.ppm  boot_00240M.ppm  boot_00250M.ppm  boot_00260M.ppm  boot_00270M.ppm  boot_00280M.ppm  boot_00290M.ppm  boot_00300M.ppm  boot_00310M.ppm  boot_00320M.ppm  boot_00330M.ppm  boot_00340M.ppm  boot_00350M.ppm  boot_00360M.ppm  boot_00370M.ppm  boot_00380M.ppm  boot_00390M.ppm  boot_00400M.ppm  boot_00410M.ppm  boot_00420M.ppm  boot_00430M.ppm  boot_00440M.ppm  boot_00450M.ppm  boot_00460M.ppm  boot_00470M.ppm  (+2000 more)
decompiled/: SCRIPT1.bas  SCRIPT2.bas  SCRIPT3.bas  SCRIPT4.bas  SCRIPT5.bas
docs/: decompilation-roadmap.md  faithfulness-audit.md  function-audit.tsv  port-validation.md
examples/: basmenus.rs  bobcheck.rs  bootscene.rs  bridgescan.rs  bridgesheet.rs  fddump.rs  findhub.rs  flickerprobe.rs  frigodim.rs  handcmp.rs  handcompose.rs  handdbg.rs  handraw.rs  handrows.rs  honkrec.rs  introband.rs  introseq.rs  menucmp.rs  (+13 more)
(+306 files in other folders)
