[package]
name = "commander-blood-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
cpal = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
wgpu = "26"
raw-window-handle = "0.6"
pollster = "0.4"
